remove jvm argument